{
  "version": 4,
  "terraform_version": "1.1.6",
  "serial": 110,
  "lineage": "f52adce6-4b9e-ac2f-f356-a724440424d6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "aws_instance_challenge",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c6ebbd55ab05f070",
            "arn": "arn:aws:ec2:eu-west-3:702279056073:instance/i-07607f757fe51e26a",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07607f757fe51e26a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "teste_1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f882c3ac3e689a90",
            "private_dns": "ip-192-168-2-188.eu-west-3.compute.internal",
            "private_ip": "192.168.2.188",
            "public_ip": "15.237.51.70",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ea9d3e0653770935",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-086c39f45a6bf2a3d",
            "tags": {
              "Name": "Challenge_instance"
            },
            "tags_all": {
              "Name": "Challenge_instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ec0213bd65e03f3c"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_example",
            "aws_subnet.public_subnet",
            "aws_vpc.sample_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:702279056073:internet-gateway/igw-0f069a5be196bdae5",
            "id": "igw-0f069a5be196bdae5",
            "owner_id": "702279056073",
            "tags": {
              "Name": "Challenge_gw"
            },
            "tags_all": {
              "Name": "Challenge_gw"
            },
            "vpc_id": "vpc-0c9570183b100c5bb"
          },
          "dependencies": [
            "aws_vpc.sample_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "r",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:702279056073:route-table/rtb-0c8e474a25f9946f0",
            "id": "rtb-0c8e474a25f9946f0",
            "owner_id": "702279056073",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f069a5be196bdae5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Challenge_route_table"
            },
            "tags_all": {
              "Name": "Challenge_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c9570183b100c5bb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.sample_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0120d2321702f52f7",
            "route_table_id": "rtb-0c8e474a25f9946f0",
            "subnet_id": "subnet-086c39f45a6bf2a3d"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.r",
            "aws_subnet.public_subnet",
            "aws_vpc.sample_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:702279056073:security-group/sg-0ec0213bd65e03f3c",
            "description": "Allow TLS and SSH inbound trafic to the machine",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ec0213bd65e03f3c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP Connections",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH Connections",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow TLS Connections",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "sg_example_name",
            "name_prefix": "",
            "owner_id": "702279056073",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Challenge_sg"
            },
            "tags_all": {
              "Name": "Challenge_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c9570183b100c5bb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sample_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:702279056073:subnet/subnet-086c39f45a6bf2a3d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-086c39f45a6bf2a3d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "702279056073",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Challenge_subnet"
            },
            "tags_all": {
              "Name": "Challenge_subnet"
            },
            "vpc_id": "vpc-0c9570183b100c5bb"
          },
          "dependencies": [
            "aws_vpc.sample_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "sample_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:702279056073:vpc/vpc-0c9570183b100c5bb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.2.0/24",
            "default_network_acl_id": "acl-00a9862705d4d519e",
            "default_route_table_id": "rtb-00de66b59d2f4a12f",
            "default_security_group_id": "sg-089c937ab87594a1c",
            "dhcp_options_id": "dopt-0d161f6c9e1fcdade",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0c9570183b100c5bb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00de66b59d2f4a12f",
            "owner_id": "702279056073",
            "tags": {
              "Name": "Challenge_vpc"
            },
            "tags_all": {
              "Name": "Challenge_vpc"
            }
          }
        }
      ]
    }
  ]
}